#pragma once
#include <string>

namespace eng {


struct GraphicSettings {
    int window_high = 600;
    int window_width = 800;
    std::string window_name = "Graphics Engine";
};

struct ProjectSettings {
    GraphicSettings graphic_settings;
};

}   // namespace eng
